tests/typechecker/fail/024-ref-cells.hyg
let x: ref {int} = ref {100 / 2};
x.value <- "this is not int"